update liff html

--- a/liff/liff.html
+++ b/liff/liff.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0,viewport-fit=cover">
-  <title>My LIFF App</title>
+  <title>Share Info</title>
   <style>
     button {
       display: none;
@@ -38,7 +38,7 @@
             })
             .then((result) => {
               if (result) {
-                alert(`[${result.status}] 轉傳成功!`)
+                alert('轉傳成功!')
               }
             })
             .catch(err => {
